<resources>
    <string name="app_name">Mine Sweeper</string>

    <!-- Button Strings -->
    <string name="BTH_Play">Play</string>
    <string name="BTH_Option">Options</string>
    <string name="BTH_About">About</string>

    <!--App Settings -->
    <string name="title_menu_game_options">Settings</string>
    <string name="title_activity_options">Options</string>
    <!-- Profile Setting -->
    <string name="title_pref_player_profile">Player Profile</string>
    <string name="title_pref_player_name">First Name</string>
    <string name="title_pref_player_last_name">Last Name</string>
    <string name="summary_pref_player_name">Set Player Name</string>
    <string name="summary_pref_player_last_name">Set Player Last Name</string>
    <string name="default_pref_player_profile_name">Player</string>
    <string name="key_pref_player_name">prefPlayerName</string>
    <string name="key_pref_player_last_name">prefPlayerLastName</string>

    <!-- Game Setting -->
    <!-- Game Setting -->
    <string name="title_pref_game_settings">Game Settings</string>
    <string name="title_pref_game_level_Selection">Levels</string>
    <string name="key_pref_level">prefGameLevel</string>
    <string name="summary_pref_game_level">Please Select Game Level</string>
    <string name="keyToggleSound">soundSettings</string>
    <string name="keyToggleAnimation">animationSettings</string>
    <string name="title_pref_sound">Sound</string>
    <string name="title_pref_Animation">Animations</string>
    <string name="title_activity_game">GameActivity</string>


    <string name="text_view_upper_menu_default_text">"0</string>
    <string name="text_view_timer_default_text">"00:00</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="dialogAboutTitle">About</string>
    <string name="dialogAboutName">Creator : Tamir Sagi</string>
    <string name="dialogAboutDepartment">Department : Software Engineer </string>
    <string name="dialogAboutCountry">Country: Israel</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="Column_ID">#</string>
    <string name="column_name">Player Name</string>
    <string name="column_round_time">Round Time</string>
    <string name="column_location">Location</string>
    <string name="column_date">Date</string>
    <string name="column_time">Time</string>
    <string name="title_activity_dbRecords_fragment">DBRecordsFragmentActivity</string>

    <string name="initial_angle_text">Initial Angle:</string>
    <string name="current_angle_text">Current Angle:</string>

<!-- Alert Dialog when game  is over and player had new record -->
    <string name="enterDetailsRecord">Good Game!!!</string>
    <string name="enterDetailsMessage">Enter Name and click save to add this Score to table.</string>

    <string name="err_name_too_long">Name is too long</string>
    <string name="err_name_empty_or_null">Please write your name</string>
    <string name="info_saved">Record was successfully saved</string>


    <!--    Google GeoLocations Services -->
    <string name="GeLocationApiKey">AIzaSyDX1o5S5-khqFx1h2dpp8NbOROEpo8gLRk</string>





</resources>
